# source-wrench

./: .prettierrc  Cargo.toml  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.tsx  import.rs  index.tsx  input.rs  main.rs  process.rs  styles.css  ui.rs  write.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: import.rs  input.rs  input_data.rs  main.rs  process.rs  write.rs
src-tauri/src/import/: obj.rs  smd.rs
src-tauri/src/process/: animation.rs  bones.rs  mesh.rs  structures.rs
src-tauri/src/utilities/: binarydata.rs  logging.rs  mathematics.rs  mod.rs
src-tauri/src/utilities/mathematics/: matrices.rs  rotations.rs  vectors.rs
src-tauri/src/write/: mesh.rs  model.rs  vertex.rs
src/components/: AnimationEntry.tsx  AnimationMenu.tsx  BodyPartEntry.tsx  BodyPartMenu.tsx  BodyPartModelEntry.tsx  FileOperations.tsx  Logging.tsx  SequenceEntry.tsx  SequenceMenu.tsx  SourceFileSelector.tsx
src/components/animating/: AnimatingMenu.tsx  Animation.tsx  AnimationsMenu.tsx  Sequence.tsx  SequencesMenu.tsx
src/components/bodygroups/: BodyGroup.tsx  BodyGroupsMenu.tsx  BodyPart.tsx
src/components/bodyparts/: BodyPart.tsx  BodyPartsMenu.tsx  Model.tsx
src/import/: obj.rs  smd.rs
src/process/: animation.rs  bones.rs  mesh.rs  sequences.rs
src/ui/: icons.rs  list_select.rs
src/utilities/: logging.rs  mathematics.rs
src/write/: mesh.rs  model.rs  vertex.rs
(+3 files in other folders)
