[package]
name = "source-wrench"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri-plugin-dialog = "2.0.0"
thiserror = "1.0.64"
kdtree = "0.7.0"
half = "2.4.1"
indexmap = "2.6.0"
bitflags = "2.6.0"
