[package]
name = "source-wrench"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri-plugin-dialog = "2.2.0"
thiserror = "2.0.12"
kdtree = "0.7.0"
half = "2.4.1"
indexmap = { version = "2.7.1", features = ["serde"] }
bitflags = "2.9.0"
